--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .jumbotron{
   background-color: #f7bf8f;
+  margin-bottom: 0%;
 }
 .title{
   margin-top: 5%;
@@ -7,10 +8,11 @@
   font-weight: bolder;
   font-size: 350%;
 }
-.bodybg{
+.bodyBg{
   background-color: #F0F0F0;
 }
 .side{
+  margin-top: 10%;
   background-color: #009966;
   height: 100%;
 }
