--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,17 @@
   background-color: #F0F0F0;
 }
 .side{
-  margin-top: 10%;
+  margin-top: 3%;
   background-color: #009966;
   height: 100%;
+  padding-top: 5%;
+  padding-left: 10%;
+  padding-bottom: 70%;
+  font-size: 30px;
+}
+.side p{
+  color: white;
+}
+.side h4{
+  color: #f7bf8f;
 }
